Fix vertical alignment of close button

--- a/packages/edit-site/src/components/style-book/style.scss
+++ b/packages/edit-site/src/components/style-book/style.scss
@@ -20,7 +20,7 @@
 .edit-site-style-book__close-button {
 	position: absolute;
 	right: $grid-unit-10;
-	top: $grid-unit-10;
+	top: ($grid-unit-60 - $button-size) / 2; // ( tab height - button size ) / 2
 }
 
 .edit-site-style-book__tab-panel {
